java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javaDoc/LinkToObjectMethods.java
/**
 * {@link #<error descr="Cannot resolve symbol 'equals'">equals</error>}
 */
interface Foo { }